delete unnecessally file and confirm being able to connect to render_html but found some error about calling class from param_all.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <div id="my-container">
         <h2>Welcome to Fujishiro Lab</h2>
         <div id="form-container">
-            <form action="index.py" method="POST">
+            <form action="http://127.0.0.1:5000/result" method="POST">
                 <div id="material1-container">
                     <select name="material1" id="material1">
                     <optgroup label="Binary">
