done with outputing binaly material band alignment

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,1 +1,17 @@
-Hello
+<!DOCTYPE <!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Gpah</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
+</head>
+<body>
+    <h2>Result</h2>
+    <p>{{ name }}</p>
+    <img src={{ url }} alt="Bandoffset" height="300" width="600">
+    
+</body>
+</html>
