--- a/templates/result.html
+++ b/templates/result.html
@@ -1,17 +1,15 @@
-<!doctype html>
+<!DOCTYPE <!DOCTYPE html>
 <html>
-   <body>
-   
-      <table border = "1">
-         {% for key, value in result.items() %}
-         
-            <tr>
-               <th> {{ key }} </th>
-               <td> {{ value }} </td>
-            </tr>
-            
-         {% endfor %}
-      </table>
-      
-   </body>
-</html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>sample</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
+</head>
+<body>
+    <p>{{ request }}</p>
+    
+</body>
+</html>>
