done with ternary material but can't get correct image

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,10 @@
                     </optgroup>
 
                     </select>
+                    <label for="x1">x: </label>
+                    <input type="text" name="x1">
+                    <label for="y1">y: </label>
+                    <input type="text" name="y1">
                 </div>
                 <div id="material2-container">
                     <select name="material2" id="material2">
@@ -98,6 +102,10 @@
                         </optgroup>
             
                     </select>
+                    <label for="x2">x: </label>
+                    <input type="text" name="x2">
+                    <label for="y2">y: </label>
+                    <input type="text" name="y2">
                 </div>
                 
                 <div id="material3-container">
@@ -142,6 +150,10 @@
                             </optgroup>
                 
                     </select>
+                    <label for="x3">x: </label>
+                    <input type="text" name="x3">
+                    <label for="y3">y: </label>
+                    <input type="text" name="y3">
                 </div>
                 <button type="submit" value="send">Calculate!</button>
             </form>
