--- a/templates/hello.html
+++ b/templates/hello.html
@@ -11,7 +11,7 @@
 <body>
     <h2>Result</h2>
     <p>{{ name }}</p>
-    <img src={{ url }} alt="Bandoffset" height="300" width="600">
+    <img src="{{ url }}" class="img-fluid" alt="Bandoffset" height="300" width="600">
     
 </body>
 </html>
