--- a/templates/main.css
+++ b/templates/main.css
@@ -1,5 +1,6 @@
 body {
-    background-image: url("http://getwallpapers.com/wallpaper/full/b/8/3/72787.jpg")
+    background-image: url("http://getwallpapers.com/wallpaper/full/b/8/3/72787.jpg");
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 select {
     font-size: 20px;
@@ -23,12 +24,13 @@ input[type=text] {
 }
 
 .mt {
-    width: 300px;
-    height: 100px;
-    border: 1.5px solid black;
+    max-width: 200px;
+    max-height: 100px;
+    border: 1.0px solid black;
     text-align: center;
     position: relative;
-    padding: 35px;
+    margin: auto;
+    padding: 10px;
 }
 
 #mt-1 {
@@ -49,4 +51,18 @@ input[type=text] {
 
 sub {
     font-size: 5px;
+}
+
+.note {
+    text-align: center;
+    align-items: center;
+    position: relative;
+    margin: 30px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+a {
+    margin: auto;
+    font-weight: bold;
 }
