complete quaternary material

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -12,6 +12,7 @@
     <h2>Result</h2>
     <p>{{ name }}</p>
     <img src="{{ url }}" class="img-fluid" alt="Bandoffset" height="300" width="600">
+    <a href="{{ url }}">Download</a>
     
 </body>
 </html>
