--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,80 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Band Gap</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/templates/main.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="main.js"></script>
+    <style type="text/css">
+        body {
+            background-image: url("http://getwallpapers.com/wallpaper/full/b/8/3/72787.jpg");
+            font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+        }
+
+        select {
+            font-size: 20px;
+            border: 2px solid gainsboro;
+            border-radius: 4px;
+            box-sizing: border-box;
+            background: white;
+            margin: 5px;
+        
+        }
+        input[type=text] {
+            width: 50px;
+            border-radius: 4px;
+            box-sizing: border-box;
+            background: white;
+            border: 2px solid gainsboro;
+        }
+        
+        #form-container {
+            text-align: center;
+        }
+        
+        .mt {
+            max-width: 200px;
+            max-height: 100px;
+            border: 1.0px solid black;
+            text-align: center;
+            position: relative;
+            margin: auto;
+            padding: 10px;
+        }
+        
+        #mt-1 {
+            background-color: whitesmoke;
+        }
+        
+        #mt-2 {
+            background-color: whitesmoke;
+        }
+        
+        #mt-3 {
+            background-color: whitesmoke;
+        }
+        
+        #note {
+            color: white;
+        }
+        
+        sub {
+            font-size: 5px;
+        }
+        
+        .note {
+            text-align: center;
+            align-items: center;
+            position: relative;
+            margin: 30px;
+            margin-left: 20px;
+            margin-right: 20px;
+        }
+        
+        a {
+            margin: auto;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body>
     <div id="my-container">
@@ -57,9 +128,9 @@
 
                     </select>
                     <label for="x1">x: </label>
-                    <input type="text" name="x1" placeholder="x =">
+                    <input type="text" name="x1" placeholder="x =" value="0.5">
                     <label for="y1">y: </label>
-                    <input type="text" name="y1" placeholder="y =">
+                    <input type="text" name="y1" placeholder="y =" value="0.5">
                 </div>
                 <div id="material2-container">
                     <select name="material2" id="material2">
@@ -104,9 +175,9 @@
             
                     </select>
                     <label for="x2">x: </label>
-                    <input type="text" name="x2" placeholder="x =">
+                    <input type="text" name="x2" placeholder="x =" value="0.5">
                     <label for="y2">y: </label>
-                    <input type="text" name="y2" placeholder="y =">
+                    <input type="text" name="y2" placeholder="y =" value="0.5">
                 </div>
                 
                 <div id="material3-container">
@@ -152,9 +223,9 @@
                 
                     </select>
                     <label for="x3">x: </label>
-                    <input type="text" name="x3" placeholder="x =">
+                    <input type="text" name="x3" placeholder="x =" value="0.5">
                     <label for="y3">y: </label>
-                    <input type="text" name="y3" placeholder="y =">
+                    <input type="text" name="y3" placeholder="y =" value="0.5">
                 </div>
                 <button type="submit" class="btn btn-primary" value="send">Calculate!</button>
             </form>
