edit option value

--- a/templates/index.html
+++ b/templates/index.html
@@ -107,6 +107,7 @@
                         <option value="AlGaSb">Al<sub>(x)</sub>Ga<sub>(1-x)</sub>Sb</option>
                         <option value="AlInP">Al<sub>(x)</sub>In<sub>(1-x)</sub>P</option>
                         <option value="AlInAs">Al<sub>(x)</sub>In<sub>(1-x)</sub>As</option>
+                        <option value="AlInSb">Al<sub>(x)</sub>In<sub>(1-x)</sub>Sb</option>
                         <option value="GaPAs">GaP<sub>(x)</sub>As<sub>(1-x)</sub></option>
                         <option value="GaAsSb">GaAs<sub>(x)</sub>Sb<sub>(1-x)</sub></option>
                         <option value="GaInP">Ga<sub>(x)</sub>In<sub>(1-x)</sub>P</option>
@@ -120,9 +121,9 @@
                     <optgroup label="Quaternary">
                         <option value="AlGaInP">Al<sub>(x)</sub>Ga<sub>(y)</sub>In<sub>(1-x-y)</sub>P</option>
                         <option value="AlGaInAs">Al<sub>(x)</sub>Ga<sub>(y)</sub>In<sub>(1-x-y)</sub>As</option>
-                        <option value="AlGaAsSb">Al<sub>(x)</sub>GaAs<sub>(y)</sub>Sb(1-y)</option>
-                        <option value="GaInPAs">Ga<sub>(x)</sub>InP<sub>(y)</sub>As(1-y)</option>
-                        <option value="GaInAsSb">Ga<sub>(x)</sub>InAs<sub>(y)</sub>Sb(1-y)</option>
+                        <option value="AlGaAsSb">Al<sub>(x)</sub>Ga(1-x)As<sub>(y)</sub>Sb(1-y)</option>
+                        <option value="GaInPAs">Ga<sub>(x)</sub>In(1-x)P<sub>(y)</sub>As(1-y)</option>
+                        <option value="GaInAsSb">Ga<sub>(x)</sub>In(1-x)As<sub>(y)</sub>Sb(1-y)</option>
                         <option value="InPAsSb">InP<sub>(x)</sub>As<sub>(y)</sub>Sb<sub>(1-x-y)</sub></option>
                     </optgroup>
 
@@ -154,6 +155,7 @@
                                 <option value="AlGaSb">Al<sub>(x)</sub>Ga<sub>(1-x)</sub>Sb</option>
                                 <option value="AlInP">Al<sub>(x)</sub>In<sub>(1-x)</sub>P</option>
                                 <option value="AlInAs">Al<sub>(x)</sub>In<sub>(1-x)</sub>As</option>
+                                <option value="AlInSb">Al<sub>(x)</sub>In<sub>(1-x)</sub>Sb</option>
                                 <option value="GaPAs">GaP<sub>(x)</sub>As<sub>(1-x)</sub></option>
                                 <option value="GaAsSb">GaAs<sub>(x)</sub>Sb<sub>(1-x)</sub></option>
                                 <option value="GaInP">Ga<sub>(x)</sub>In<sub>(1-x)</sub>P</option>
@@ -167,9 +169,9 @@
                             <optgroup label="Quaternary">
                                 <option value="AlGaInP">Al<sub>(x)</sub>Ga<sub>(y)</sub>In<sub>(1-x-y)</sub>P</option>
                                 <option value="AlGaInAs">Al<sub>(x)</sub>Ga<sub>(y)</sub>In<sub>(1-x-y)</sub>As</option>
-                                <option value="AlGaAsSb">Al<sub>(x)</sub>GaAs<sub>(y)</sub>Sb(1-y)</option>
-                                <option value="GaInPAs">Ga<sub>(x)</sub>InP<sub>(y)</sub>As(1-y)</option>
-                                <option value="GaInAsSb">Ga<sub>(x)</sub>InAs<sub>(y)</sub>Sb(1-y)</option>
+                                <option value="AlGaAsSb">Al<sub>(x)</sub>Ga(1-x)As<sub>(y)</sub>Sb(1-y)</option>
+                                <option value="GaInPAs">Ga<sub>(x)</sub>In(1-x)P<sub>(y)</sub>As(1-y)</option>
+                                <option value="GaInAsSb">Ga<sub>(x)</sub>In(1-x)As<sub>(y)</sub>Sb(1-y)</option>
                                 <option value="InPAsSb">InP<sub>(x)</sub>As<sub>(y)</sub>Sb<sub>(1-x-y)</sub></option>
                             </optgroup>
             
@@ -202,6 +204,7 @@
                                     <option value="AlGaSb">Al<sub>(x)</sub>Ga<sub>(1-x)</sub>Sb</option>
                                     <option value="AlInP">Al<sub>(x)</sub>In<sub>(1-x)</sub>P</option>
                                     <option value="AlInAs">Al<sub>(x)</sub>In<sub>(1-x)</sub>As</option>
+                                    <option value="AlInSb">Al<sub>(x)</sub>In<sub>(1-x)</sub>Sb</option>
                                     <option value="GaPAs">GaP<sub>(x)</sub>As<sub>(1-x)</sub></option>
                                     <option value="GaAsSb">GaAs<sub>(x)</sub>Sb<sub>(1-x)</sub></option>
                                     <option value="GaInP">Ga<sub>(x)</sub>In<sub>(1-x)</sub>P</option>
@@ -215,9 +218,9 @@
                                 <optgroup label="Quaternary">
                                     <option value="AlGaInP">Al<sub>(x)</sub>Ga<sub>(y)</sub>In<sub>(1-x-y)</sub>P</option>
                                     <option value="AlGaInAs">Al<sub>(x)</sub>Ga<sub>(y)</sub>In<sub>(1-x-y)</sub>As</option>
-                                    <option value="AlGaAsSb">Al<sub>(x)</sub>GaAs<sub>(y)</sub>Sb(1-y)</option>
-                                    <option value="GaInPAs">Ga<sub>(x)</sub>InP<sub>(y)</sub>As(1-y)</option>
-                                    <option value="GaInAsSb">Ga<sub>(x)</sub>InAs<sub>(y)</sub>Sb(1-y)</option>
+                                    <option value="AlGaAsSb">Al<sub>(x)</sub>Ga(1-x)As<sub>(y)</sub>Sb(1-y)</option>
+                                    <option value="GaInPAs">Ga<sub>(x)</sub>In(1-x)P<sub>(y)</sub>As(1-y)</option>
+                                    <option value="GaInAsSb">Ga<sub>(x)</sub>In(1-x)As<sub>(y)</sub>Sb(1-y)</option>
                                     <option value="InPAsSb">InP<sub>(x)</sub>As<sub>(y)</sub>Sb<sub>(1-x-y)</sub></option>
                                 </optgroup>
                 
